--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /plansza_labirynt/.vs/plansza_labirynt/FileContentIndex/ffdb0bbe-966b-421a-9fb4-f7cfd5931955.vsidx
+/plansza_labirynt/.vs
